--- a/components/motorDC/CMakeLists.txt
+++ b/components/motorDC/CMakeLists.txt
@@ -1,3 +1,6 @@
 idf_component_register(SRCS "motorDC.c"
                     INCLUDE_DIRS "."
+                    REQUIRES 
+                        "driver"
+                        "freertos"
                     )
