--- a/components/hx711_comp/CMakeLists.txt
+++ b/components/hx711_comp/CMakeLists.txt
@@ -1,3 +1,5 @@
 idf_component_register(SRCS "hx711_comp.c"
                     INCLUDE_DIRS "."
+                    REQUIRES
+                        hx711
                     )
