--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,6 +18,8 @@
         "freertos.h": "c",
         "esp_log.h": "c",
         "stdio.h": "c",
-        "task.h": "c"
+        "task.h": "c",
+        "semphr.h": "c",
+        "variables_globales.h": "c"
     }
 }
