--- a/components/hx711_comp/CMakeLists.txt
+++ b/components/hx711_comp/CMakeLists.txt
@@ -1,5 +1,6 @@
 idf_component_register(SRCS "hx711_comp.c"
                     INCLUDE_DIRS "."
                     REQUIRES
+                        "variables_globales"
                         hx711
                     )
