--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,6 +25,7 @@
         "cjson.h": "c",
         "netdb.h": "c",
         "string.h": "c",
-        "ultra.h": "c"
+        "ultra.h": "c",
+        "parse_endpoints.h": "c"
     }
 }
