--- a/components/consumo_data/CMakeLists.txt
+++ b/components/consumo_data/CMakeLists.txt
@@ -2,11 +2,10 @@ idf_component_register(
                     SRCS 
                         "consumo_data.c"
                     INCLUDE_DIRS "."
-                    EMBED_TXTFILES
-                        "../../cert/azure.crt"
                     REQUIRES
                         esp_http_client
                         log
+                        "variables_globales"
                         "freertos" 
                         "parse_endpoints"
                     )
