--- a/components/variables_globales/CMakeLists.txt
+++ b/components/variables_globales/CMakeLists.txt
@@ -1,5 +1,7 @@
 idf_component_register(SRCS "variables_globales.c"
                     INCLUDE_DIRS "."
+                    EMBED_TXTFILES
+                    "../../cert/azure.crt"
                     REQUIRES    
                         "freertos"
                     )
